k8s-yaml/istio/test/nginx-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: nginx
      app: nginx
  template:
    metadata:
      labels:
        k8s-app: nginx
        app: nginx
        istio: ingressgateway
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        #traffic.sidecar.istio.io/includeInboundPorts: "80,8080"	
    spec:
      containers:
        - name: nginx
          image: juestnow/nginx
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:  ["/bin/sh", "-c", "echo Hello v1 > /www/index.html"]
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 8080
              name: http-vts
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: http-vts
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
        - name: nginx-vts-exporter
          image: juestnow/nginx-vts-exporter
          imagePullPolicy: IfNotPresent
          args:
          - "-nginx.scrape_uri=http://localhost:8080/format/json"
          ports:
            - containerPort: 9913
              name: http-metrics
              protocol: TCP
          resources:
            requests:
              memory: 30Mi
              cpu: 102m
            limits:
              memory: 50Mi
              cpu: 250m
