k8s-yaml/istio/test/nginx-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: nginx
      app: nginx
  template:
    metadata:
      labels:
        k8s-app: nginx
        app: nginx
        istio: ingressgateway
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
        #traffic.sidecar.istio.io/includeInboundPorts: "80,8080"	
    spec:
      containers:
        - name: nginx
          image: juestnow/nginx-alpine:1.21.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:  ["/bin/sh", "-c", "echo Hello v2 > /var/lib/nginx/html/index.html"]
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 8080
              name: http-metrics
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /healthz
              port: http-metrics
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
