k8s-yaml/istio/test/nginx-ratings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
   name: nginx-ratings
   namespace: default
spec:
   host: nginx
   # 配置粘性会话！
   #trafficPolicy:
   #   loadBalancer:
   #    consistentHash:
   #      httpCookie:
   #        name: user
   #        ttl: 0s           
   subsets:
   - name: v1
     labels:
       version: v1
   - name: v2
     labels:
       version: v2
