k8s-yaml/istio/test/nginx-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nginx
    app: nginx
    istio: ingressgateway
  name: nginx
  namespace: default
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: 'true'    
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    k8s-app: nginx
    app: nginx
    istio: ingressgateway
  ports:
    - protocol: TCP
      port: 80
      name: http
    - protocol: TCP
      port: 8080
      name: http-metrics
  type: ClusterIP
