k8s-yaml/istio/test/traefik-nginx-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: istio-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`nginx.tycng.com`)
    kind: Rule
    services:
    - name: istio-ingressgateway
      port: 80
      #healthCheck:
      #  path: /health
      #  port: 8080
      #  intervalSeconds: 7
      #  timeoutSeconds: 60
      #strategy: RoundRobin
      sticky:
        cookie: {}  
      passHostHeader: true
      responseForwarding:
        flushInterval: 100ms
